fixed card width on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,7 +39,7 @@ body {
                 }
             }
             @media (max-width: 768px) {
-                width: 24%;
+                width: 26%;
                 margin: 3% 1%;
             }
         }
